feat: added some operations

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -14,7 +14,7 @@
 
 
 <div class="label_signup">
-    <p th:text="'Risultato = ' + ${result} + '!'" />
+    <p th:text="'Operazione ' +${operazione}+' Risultato = ' + ${result} + '!'" />
 </div>
 </body>
 </html>
